# rust_mandelbrot

./: Cargo.toml  README.md  run
src/: lib.rs  main.rs  tree
src/controller/: control.rs
src/images/: fractal.rs  mandelbrot.rs
src/views/: cli_default.rs  default.rs  positional.rs  quick_derive.rs  settings_parser.rs
