[package]
name = "rust_mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
image = "0.24.2"
# serde = "1.0.137"
# serde = {version = "1.0.137", features = ["derive"] } 
# serde_json = "1.0.81"
num-complex = "0.4.1"
regex = "1.5.6"